--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               Experienced search marketer seeking a position focused on agressive growth.
+               Experienced search marketer seeking a techincal search marketing position.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
@@ -138,10 +138,20 @@
                Jan 2022 to Jan 2023<br>
                <ul>
                   <li>Provided keyword research for new content.</li>
-                  <li>Implemented SEO best practices to improve page speed, security, reduced duplication, and added structured data.</li>
-                  <li>Implemented Google News optimizations to boost traffic.</li>
-                  <li>Started & grew an MSN Ads account to over 10,000 clicks/day.</li>
-                  <li>Increased Google ads traffic by 400% with the same budget.</li>
+                  <li>Implemented SEO best practices wherever possible. </li>
+                  <li>Created, optimized, & grew an MSN Ads account to over 10,000 clicks a day.</li>
+                  <li>Provided recommendations that increased Google ads traffic by 400% with the same budget.</li>
+                  <li>Implemented the Google News marketing channel to add significant traffic.</li>
+                  <li>Technical lead for programmatic changes for SEO and UI improvements to the website.</li>
+                  <li>Technical SEO improvements:
+                     <ul>
+                        <li>Added and optimized a CDN.</li>
+                        <li>Added structured data.</li>
+                        <li>Optimized templates for faster load times.</li>
+                        <li>Optimized templates for better topic accuracy.</li>
+                     </ul>
+                  </li>
+
                </ul>
             </div>
             <div class="section">
