--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <meta name="language" content="english">
       <style>
          body{position:relative;max-width:1200px;min-width:800px;margin:auto;background:#1e1e1c;font-size:18px;line-height:24px;height:100%}
-         header{text-align:center;background-color: blue;color:white}
+         header{text-align:center;background-color: blue;color:white;}
          h1{font-size:48px;margin:0;padding:45px 0 20px 0;border:0;font-weight:300;}
          h2{font-size:24px;margin:0;padding:10px 0 35px 0;border:0;font-weight:300;}
          ul{margin-bottom: 0px;}
@@ -21,7 +21,7 @@
          .col-1 {flex: .23;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
          .col-2 {flex: .78;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
          .section{padding:25px 0 0 0}
-         .section-title{font-size: 18px;font-weight: 600;}
+         .section-title{font-size: 19px;font-weight: 900;}
          .position-title, .project-title{font-size: 20px;font-weight: 600;color:grey}
          .company-name{font-weight: bold;}
          .skill-group{font-size: 18px;font-weight:600;color:grey}
@@ -33,8 +33,19 @@
             svg{display:none;}
          }
       </style>
+   <!-- Google Tag Manager -->
+      <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-W556398');</script>
+   <!-- End Google Tag Manager -->
    </head>
    <body>
+      <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W556398"
+   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+   <!-- End Google Tag Manager (noscript) -->
       <header>
          <h1>LARS ESTREM</h1>
          <h2>Digital marketing strategist focusing on SEO and pay-per-click advertising</h2>   
