--- a/index.html
+++ b/index.html
@@ -152,8 +152,9 @@
                   <li>Implemented SEO best practices wherever possible. </li>
                   <li>Created, optimized, & grew an MSN Ads account to over 10,000 clicks a day.</li>
                   <li>Provided recommendations that increased Google ads traffic by 400% with the same budget.</li>
-                  <li>Implemented the Google News marketing channel to add significant traffic.</li>
+                  <li>Implemented the Google News marketing channel to drive more traffic.</li>
                   <li>Technical lead for programmatic changes for SEO and UI improvements to the website.</li>
+                  <li>Utilized AI for keyword research, topic ideas, and content optimizations.</li>
                   <li>Technical SEO improvements:
                      <ul>
                         <li>Added and optimized a CDN.</li>
@@ -162,7 +163,6 @@
                         <li>Optimized templates for better topic accuracy.</li>
                      </ul>
                   </li>
-
                </ul>
             </div>
             <div class="section">
