--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
    <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      
+      <meta name="cf-2fa-verify" content="Nd0RnMxr5844yqHWbDX7">
       <title>Lars Estrem Resume - SEO & PPC Strategist</title>
       <link rel="icon" type="image/svg+xml" href="https://resume-7id.pages.dev/favicon.svg">
       <link rel="canonical" href="https://resume-7id.pages.dev/">
