--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <meta name="description" content="Lars Estrem Resume: Education, Skills, and Work Experience. SEO, Technical SEO, Digital Marketing, Marketing Strategy, Pay Per Click Marketing, PPC">
       <meta name="keywords" content="SEO, Technical SEO, SEO Strategy, Digital Marketing, Pay Per Click Marketing, PPC">
       <meta name="language" content="english">
+      <meta name="robots" content="noindex, nofollow" />
       <style>
          body{position:relative;max-width:1200px;min-width:800px;margin:auto;background:#1e1e1c;font-size:16px;line-height:24px;height:100%}
          header{text-align:center;background-color: blue;color:white;}
@@ -228,4 +229,3 @@
       </div>   
    </body>
 </html>
-
