--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          .col-1 {flex: .23;text-align:right;padding: 0 2.5% 0 .5%;background-color:#F0F0F0;color:black}
          .col-2 {flex: .78;text-align:left; padding: 0 2.5% 0 2.5%;background-color:white ;color:black}
          .section{padding:25px 0 0 0}
-         .section-title{font-size: 19px;font-weight: 900;}
+         .section-title{font-size: 22px;font-weight: 900;}
          .position-title, .project-title{font-size: 20px;font-weight: 600;color:grey}
          .company-name{font-weight: bold;}
          .skill-group{font-size: 18px;font-weight:600;color:grey}
@@ -137,8 +137,7 @@
          <div class="col-2">
             <div class="section">
                <div class="section-title">CAREER OBJECTIVE</div>
-               Seeking a digital marketing strategist role utilizing expertise in campaign creation, data analysis, and industry knowledge 
-               to drive business growth, increase customer engagement and generate targeted traffic.
+               To leverage data-driven insights as a Digital Marketing Expert to optimize SEO and PPC campaigns for non-profit or for-profit organizations, driving traffic and revenue growth.
             </div>
             <div class="section">
                <div class="section-title" style="padding-bottom:15px">WORK EXPERIENCE</div>
@@ -146,14 +145,14 @@
                <a class="company-name" href="https://diatribe.org/">diaTribe Foundation</a> <br>
                Jan 2022 to Jan 2023<br>
                <ul>
-                  <li>Provided keyword research for new content.</li>
-                  <li>Implemented SEO best practices wherever possible. </li>
-                  <li>Created & optimized an MSN Ads account to over 10,000 clicks a day.</li>
-                  <li>Increased Google ads traffic by 400% with the same budget.</li>
-                  <li>Implemented the Google News marketing channel to drive more traffic.</li>
-                  <li>Technical lead for the implementation of SEO and UI improvements.</li>
-                  <li>Utilized AI for keyword research, topic ideas, and content optimizations.</li>
-                  <li>Technical SEO improvements (Added a CDN, structured data, improved load times, & improved topic accuracy).</li>
+                  <li>Optimized analytics tracking to carefully monitored user acquisition, engagement, & conversions.</li>
+                  <li>Increased the page rank of high-priority pages by combining the authority of duplicate pages.</li>
+                  <li>Implemented Google News optimization best practices to generate more traffic from new content.</li>
+                  <li>Optimized headings and titles to better align with user intent and vocabulary commonly used by visitors.</li>
+                  <li>Reduced the cost per acquisition on paid search campaigns to less than 1/20th of the previous cost per click.</li>
+                  <li>Implemented structural changes to the site navigation to better pass authority aligned to specific topics.</li>
+                  <li>Utilized artificial intelligence for keyword research, topic development, & optimizations.</li>
+                  <li>Improved site health (technical SEO), by adding a CDN, structured data, & coding best practices.</li>
                </ul>
             </div>
             <div class="section">
